# deer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Pipfile  README.md  setup.cfg  setup.py
src/: translate.py  ud.py  weather.py
src/deer/: Socket.py  __init__.py  __main__.py  cli.py  irc.py  main.py
src/deer/translate/: __init__.py
src/deer/urbandict/: __init__.py
src/deer/weather/: __init__.py
tests/: test_weather.py
tests/.pytest_cache/v/cache/: lastfailed  nodeids
tests/weather/: 03022022.json
