[metadata]
name = deer
version = 0.0.1
author = The Habibis
description = A very evil general-purpose IRC bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nxf7/deer
project_urls =
    Bug Tracker = https://github.com/nxf7/deer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires = 
    requests

[options.extras_require]
tests = pytest

[options.packages.find]
where = src
exclude = 
    tests*

[options.entry_points]
console_scripts =
        deercli = deer:main
